add css bootstep css styles color page two html

--- a/weekly-review.html
+++ b/weekly-review.html
@@ -1,14 +1,19 @@
 <head>
+  <link href="css/bootstrap.css" rel ="stylesheet" type="text/css" media="all">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Weekly review</title>
 <head>
 <body>
-
+  <div class="container">
+    <div class="jumbotron">
   <h1>My first week at epicodus</h1>
   <img src="epicodus_logo.png"="epicoduslogo">
-    <p>I learned how to do commands in terminal and how to open a new project in atom</p>
-    <p>One of the most important things i learned in epicodus was the ability to cooperate with the partner i chose</p>
-      <p>At Epicodus <strong> <em> it is highly important</em> </strong> to work with your fellow partner</p>
-         <li><em>ALWAYS</em> remember to never leave your partner behind</li>
+    <p><strong>I learned how to do commands in terminal and how to open a new project in atom</p>
+    <p>One of the most important things i learned in epicodus was the ability to cooperate with the partner i chose</strong></p>
+      <p>At Epicodus <em> it is highly important</em> to work with your fellow partner</p>
+         <li><strong><em>ALWAYS</em> remember to never leave your partner behind:</strong></li>
+         <p> this step is highly important because you want your partner to know whats going on and make them understand the steps and codes
          <li>at epicodus it also important to ask others around you for help</li>
+         <a href="page-two.html">page two</a>
+
 <body>
