added pc picture of pc, changed color, added new headed

--- a/weekly-review.html
+++ b/weekly-review.html
@@ -7,6 +7,7 @@
   <div class="container">
     <div class="jumbotron">
   <h1>My first week at epicodus</h1>
+  <h2>by ivan ramos</h2>
   <img src="epicodus_logo.png"="epicoduslogo">
     <p><strong>I learned how to do commands in terminal and how to open a new project in atom</p>
     <p>One of the most important things i learned in epicodus was the ability to cooperate with the partner i chose</strong></p>
@@ -14,6 +15,7 @@
          <li><strong><em>ALWAYS</em> remember to never leave your partner behind:</strong></li>
          <p> this step is highly important because you want your partner to know whats going on and make them understand the steps and codes
          <li>at epicodus it also important to ask others around you for help</li>
+         <img src="pc.jpeg"="pcwork">
          <a href="page-two.html">page two</a>
 
 <body>
