changed color, resize fonts and made a bullet point bigger

--- a/weekly-review.html
+++ b/weekly-review.html
@@ -6,7 +6,7 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-  <h1>My first week at epicodus</h1>
+  <h1>My first week at Epicodus</h1>
   <h2>by ivan ramos</h2>
   <img src="epicodus_logo.png"="epicoduslogo">
     <p><strong>I learned how to do commands in terminal and how to open a new project in atom</p>
@@ -14,7 +14,8 @@
       <p>At Epicodus <em> it is highly important</em> to work with your fellow partner</p>
          <li><strong><em>ALWAYS</em> remember to never leave your partner behind:</strong></li>
          <p> this step is highly important because you want your partner to know whats going on and make them understand the steps and codes
-         <li>at epicodus it also important to ask others around you for help</li>
+         <li><strong>At epicodus it also important to ask others around you for help</strong></li>
+         <p> Asking around help from others is a pratice you will need to use once your at a job <p>
          <img src="pc.jpeg"="pcwork">
          <a href="page-two.html">page two</a>
 
