--- a/weekly-review.html
+++ b/weekly-review.html
@@ -8,6 +8,7 @@
     <div class="jumbotron">
   <h1>My first week at Epicodus</h1>
   <h2>by ivan ramos</h2>
+
   <img src="epicodus_logo.png"="epicoduslogo">
     <p><strong>I learned how to do commands in terminal and how to open a new project in atom</p>
     <p>One of the most important things i learned in epicodus was the ability to cooperate with the partner i chose</strong></p>
@@ -17,6 +18,10 @@
          <li><strong>At epicodus it also important to ask others around you for help</strong></li>
          <p> Asking around help from others is a pratice you will need to use once your at a job <p>
          <img src="pc.jpeg"="pcwork">
-         <a href="page-two.html">page two</a>
+         <li> <strong>in epicodus i am currently in Intro C#</strong></li>
+         <p>so far i've learned how to make a webpage with basic html commads</p>
+
+         <strong> <a href="page-two.html">page two</a> </strong>
+
 
 <body>
