added text on second page and picture as well

--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-  <h1>Web page about Ivan Ramos</h1>
+  <h1> Web page about Ivan Ramos</h1>
   <h2>by ivan ramos</h2>
   <blockquote>
     <img src="pc.jpeg"="pcwork">
       <p><strong>CURRENT INTERESTS</strong></p>
-      <blockquote>
-      <li>Programming has always been an intrest of mine, ive always been curious on what goes behind the scenes of website and how it works using codes
-        <blockquote>
-        <li>Another computer interest for me is video editing, i've practicing that on my own time and it really is fun
+      <ul>
+        <li>Programming has always been an interest of mine, I've always been curious on what goes behind the scenes of website and how It works using codes
+          <li>Another computer interest for me Is video editing, I've practicing that on my own time and It really Is fun
+            <blockquote>
+      <ul>
     <img src="mexico.jpg"="flaglogo">
       <p> <strong> ABOUT ME </strong> <p>
-      <li>I'm a the middle child and im first generation hispanic american</li>
-        <li>One of the most <em> important </em> facts about me is that i do have a hearing disablity on my left ear</li>        
-          <li>
+        <ul>
+      <li>I'm a the middle child and I'm first generation hispanic american</li>
+        <li>One of the most <em> important </em> facts about me Is that I do have a hearing disablity on my left ear</li>
+          <li>My other two siblinngs are named Dalia and Nahu</li>
+            <ul>
 
-           <strong> <a href="page-two.html">page two</a> </strong>
+           <strong> <a href="page-two.html">page 2</a> </strong>
 
 
 <body>
