added two pictures of portland deer and one of outdoors

--- a/page-two.html
+++ b/page-two.html
@@ -8,8 +8,10 @@
       <div class="jumbotron">
         <h1> Webpage about Ivan Ramos </h2>
           <h2> page 2 </h2>
-          <img src="pc.jpeg"="pcwork">
-            <p><strong>CURRENT INTERESTS</strong></p>
+          <img src="deer.jpg"="deer">
+            <p><strong>MY BACKGROUND</strong></p>
             <ul>
-              <li>Programming has always been an interest of mine, I've always been curious on what goes behind the scenes of website and how It works using codes
-                <li>Another computer interest for me Is video editing, I've practicing that on my own time and It really Is fun
+              <li>I grew up In Portland, Oregon for all of my life, I'm currently 20 and my birthday Is Octber 5th</l1>
+                <li>Another computer interest for me Is video editing, I've practicing that on my own time and It really Is fun</l1>
+                <p> <strong> <a href="https://ivanramos148.github.io/weekly-review-friday/">Back</a> </strong></p>
+          <img src="hike.jpg"="hike">
